Config server desde Github en funcionamiento ok

--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -2,16 +2,17 @@
 spring.application.name=products-service
 server.port=8080
 
+#determino que endoints
 management.endpoints.web.exposure.include=health,info
 
+#determino si se envia info a la endpoint y que info
 management.info.env.enabled=true
-
-
-
 info.app.name=products-service
 info.app.description=microservicio de ejemplo
 info.app.version=1.0.0
 
+
+#esto hay que hacerlo para cada uno de los client que queremos modificar este redireccionamiento
 
 eureka.instance.status-page-url-path=http://localhost:8080/actuator/info
 eureka.instance.health-check-url-path=http://localhost:8080/actuator/health
