--- a/products-service/pom.xml
+++ b/products-service/pom.xml
@@ -19,11 +19,12 @@
 	</properties>
 	<dependencies>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>4.0.4</version>
-		</dependency>
+		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
